--- a/第09课/config/eurekaclient.yml
+++ b/第09课/config/eurekaclient.yml
@@ -7,11 +7,7 @@ server:
 spring:
   application:
     name: eurekaclient
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-  sleuth:
-    sampler:
-      percentage: 1.0
+management:
+  security:
+    #关闭安全验证，否则访问refresh端点时会提示权限不足
+    enabled: false
