--- a/第09课/config/eurekaclient.yml
+++ b/第09课/config/eurekaclient.yml
@@ -3,18 +3,12 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 server:
-  port: 8764
+  port: 8765
 spring:
   application:
     name: eurekaclient
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-  sleuth:
-        sampler:
-            percentage: 1.0
 management:
-  security:
-    #关闭安全验证，否则访问refresh端点时会提示权限不足
-    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: refresh,health,info
